Change Rectangular to Grid Iron and Radial to Ring Radial everywhere

--- a/views/category.pug
+++ b/views/category.pug
@@ -5,12 +5,12 @@ block content
   ul
     li      
       a(href=data_a) 
-        img(src="rectangular.jpg", alt="Rectangular grid")
-        span Rectangular
+        img(src="grid-iron.jpg", alt="Grid Iron grid")
+        span Grid Iron
     li 
       a(href=data_b) 
-        img(src="radial.jpg", alt="Radial grid")
-        span Radial
+        img(src="ring-radial.jpg", alt="Ring Radial grid")
+        span Ring Radial
     li 
       a(href=data_c) 
         img(src="organic.jpg", alt="Organic grid")
